--- a/book_club/dashboard/templates/dashboard/dashboard.html
+++ b/book_club/dashboard/templates/dashboard/dashboard.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 {% block content %}
 
+<div class="d-flex align-items-start flex-column h-100 p-5">
 <h1>{% trans "Dashboard" %}</h1>
 <h2>{{user.pseudo}}</h2>
+</div>
 {% endblock %}
