--- a/book_club/static/assets/css/dashboard.css
+++ b/book_club/static/assets/css/dashboard.css
@@ -5,6 +5,7 @@
 #dashboard-page {
   background-color: var(--lightest-color);
   padding:0 !important;
+  min-height: 100%;
 }
 
 /* Sidebar */
@@ -16,8 +17,8 @@ img#sidebar-logo {
 }
 
 @media  screen and (max-width:767px) {
-  #menu {
-    height: 41px;
+  #sidebar {
+    height: 55px;
   }
 }
 
