--- a/book_club/static/assets/css/main.css
+++ b/book_club/static/assets/css/main.css
@@ -372,6 +372,10 @@ color:var(--light-color) !important;
 /* || Profile */
 
 @media only screen and (min-width: 768px){
+
+  .profile-wrapper {
+    min-height:0px !important;
+  }
   
   .profile-card, .profile-subcard {
     background-color: whitesmoke;
@@ -400,11 +404,14 @@ color:var(--light-color) !important;
     border-radius: 30px 30px 0 0;
   }
 
-
-
  
 }
 
+/* Mobile */
+
+.profile-wrapper {
+  min-height: 100%;
+}
 
 .profile-card {
   position: relative;
@@ -460,7 +467,7 @@ color:var(--light-color) !important;
   background-image:
     radial-gradient(circle at 10px 15px, var(--lightest-color) 12px, transparent 13px);
 }
-.profile-card header .avatar {
+.profile-card header .avatar, .profile-card header img {
   position: absolute;
   left: 50%;
   top: 60px;
@@ -471,6 +478,10 @@ color:var(--light-color) !important;
   border-radius: 50%;
   overflow: hidden;
   background: #ccc;
+  
+}
+
+.profile-card header .avatar {
   border: 3px solid #fff;
 }
 .profile-card header .avatar img {
@@ -487,7 +498,7 @@ color:var(--light-color) !important;
 }
 .profile-card h3 {
   position: relative;
-  margin: 10px 0 30px;
+  margin: 45px 0 30px;
   text-align: center;
 }
 .profile-card h3::after {
