--- a/book_club/users/templates/users/authentication/password_reset.html
+++ b/book_club/users/templates/users/authentication/password_reset.html
@@ -9,7 +9,7 @@
                 <img  src="{% static 'assets/img/illustrations/forgot_password.svg' %}" style="height:100px;"/>
             </div>
             <h1 class="brand-color text-center mt-2">{% trans 'Reset password' %}</h1>
-            <p>{% trans "Please enter your username below and we will send you an email with a link to reset your password."  %}</p>
+            <p>{% trans "Please enter your email address below and we will send you an email with a link to reset your password."  %}</p>
         </div>
         <!-- Intro End -->
     
