--- a/book_club/users/templates/users/includes/header.html
+++ b/book_club/users/templates/users/includes/header.html
@@ -22,8 +22,8 @@
                 <div class="navbar-nav ms-auto text-center pe-3">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'dashboard' %}">
-                            {% if request.user.profile.avatar %}
-                                <span class="user-img"><img class="rounded-circle" src="{{ request.user.avatar.url }} "width="45" alt="profile_pic"></span>
+                            {% if request.user.profile_pic %}
+                                <span class="user-img"><img class="rounded-circle" src="{{ request.user.profile_pic.url }} "width="45" alt="profile_pic"></span>
                             {% else %}
                                 <span class="user-img">{{ request.user|avatar }}</span> 
                             {% endif %} 
