--- a/book_club/users/templates/users/profile_update.html
+++ b/book_club/users/templates/users/profile_update.html
@@ -2,129 +2,73 @@
 {% load avatar i18n %}
 {% block title %}{% trans 'Profile Update' %}{% endblock title %}
 {% block content %}
-<div class="container mt-5 pb-2">
-    
-    <div class="abstract-form mt-2">
-    {% if user_form.errors %}
-        <div class="alert alert-danger alert-dismissible" role="alert">
-            <div id="form_errors">
-                {% for key, value in circle_form.errors.items %}
-                <strong>{{ value }}</strong>
-                {% endfor %}
-            </div>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    {% endif %}
-        <h1 class="text-center">{% trans 'Update Profile' %} </h1>
-    <div class="row justify-content-center pt-2">
-        {% if request.user.profile.avatar %}
-        <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
-        {% else %}
-        <span class="icon">{{ request.user|avatar }}</span>
-        {% endif %}
-    </div>
-    <div class="row justify-content-center pt-5">
-        <div class="form-content">
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="form-row justify-content-center">
-                <div class="col-12 text-center">
-                 <label class="text-center">{% trans 'Upload New Picture' %}</label>
-                       <input
-  type="file"
-  id="fileElem"
-  multiple
-  accept="image/*"
-  name="avatar"
-  style="display:none" 
-  />
-{% if request.user.profile.avatar %}
-<a href="#" id="fileSelect" class="icon">
-<img class="rounded-circle avatar-upload" src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
-</a>
-{% else %}
-<a href="#" id="fileSelect" class="icon">{{ request.user|avatar }}</a>
-{% endif %}
-<div id="fileList" class="mt-3 color-light">
-  <p></p>
-</div>
-</div>
-                    <div class="col-md-8">
-                        <div class="form-group">
-                            <label class=" mb-1 text-white">{% trans 'Username' %}:</label>
-                                {{ form.pseudo }}
-                            <label class=" mb-1 text-white">{% trans 'Email' %}:</label>
-                                {{ form.email }}
-                        </div>
-                        <div class="form-group">
-                            <a href="#" class="btn-kdark btn-rounded">{% trans 'Change Password' %}</a>
-                            <hr>
-                           
-                        </div>
-                        <label class=" mb-1 text-white">Bio:</label> {{form.bio }}
-                    </div>
-                </div>
-                <br><br>
-                <button type="submit" class="btn btn-dark btn-lg">{% trans 'Save Changes' %}</button>
-                <button type="reset" class="btn btn-dark btn-lg">{% trans 'Reset' %}</button>
-                <div class="signup-link small">
-            
-            <a href="{% url 'profile' user.slug %}" class="mid-color">{% trans 'Cancel' %}</a>
-            </div>
-            </form>
-        </div>
-    </div>
-    
-    </div>
-</div>
+
 
 <!-- New Form -->
-<form class="update-form">
-  {% if user_form.errors %}
-    <div class="alert alert-danger alert-dismissible" role="alert">
-        <div id="form_errors">
-            {% for key, value in circle_form.errors.items %}
-            <strong>{{ value }}</strong>
-            {% endfor %}
-        </div>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-  {% endif %}
+<div class="d-flex align-items-center justify-content-center">
+  <form class="kform" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% if user_form.errors %}
+      <div class="alert alert-danger alert-dismissible" role="alert">
+          <div id="form_errors">
+              {% for key, value in circle_form.errors.items %}
+              <strong>{{ value }}</strong>
+              {% endfor %}
+          </div>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+    {% endif %}
     <p class="title">{% trans 'Update Profile' %}</p>
     
-        <div class="d-flex">
-        {{form.first_name}}
-        <label>
-            <input class="input" type="text" placeholder="" required="">
-            <span></span>
-        </label>
+    <input
+      type="file"
+      id="fileElem"
+      multiple
+      accept="image/*"
+      name="profile_pic"
+      style="display:none" 
+      />
+      <div class="avatar-wrapper text-center mx-auto">
+      {% if request.user.profile_pic %}
+        <a href="#" id="fileSelect">
+          <img id="change-image" class="avatar-upload" src="{{ user.profile_pic.url }} " style="cursor: pointer;"/>
+          <div class="avatar-overlay"><i class="fa fa-camera-retro icon"></i></div>
+        </a>
+      {% else %}
+        <a href="#" id="fileSelect" class="avatar-upload">
+          {{ request.user|avatar }}
+          <div class="avatar-overlay"><i class="fa fa-camera-retro icon"></i></div>
+        </a>
+      
+      {% endif %}
+      </div>
+      <div id="fileList" class="mt-3 color-light">
+        <p></p>
+      </div>
 
-        <label>
-            <input class="input" type="text" placeholder="" required="">
-            <span>Lastname</span>
-        </label>
-    </div>  
-            
-    <label>
-        <input class="input" type="email" placeholder="" required="">
-        <span>Email</span>
-    </label> 
-        
-    <label>
-        <input class="input" type="password" placeholder="" required="">
-        <span>Password</span>
-    </label>
-    <label>
-        <input class="input" type="password" placeholder="" required="">
-        <span>Confirm password</span>
-    </label>
-    <button class="submit">Submit</button>
-    <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
-</form>
+      {% if request.user.profile_pic%}
+      <a href="{% url 'profile-pic-delete' request.user.slug %}">{% trans 'Delete your profile picture' %}</a>
+
+      {% endif %}
+
+
+        <div class="d-flex mid-inputs justify-content-between">
+          {{form.first_name}}
+          {{form.last_name}}  
+        </div>  
+        {{form.pseudo}}
+        {{form.email}}
+        {{form.bio}}
+      <a class="mid-color" href={% url "password-reset"  %} >{% trans 'Change password' %}</a>
+      
+      <button class="submit" type="submit ">{% trans 'Submit' %}</button>
+      <div class="text-center">
+        <a href="{% url 'profile' user.slug %}" class="mid-color">{% trans 'Cancel' %}</a>
+      </div>
+  </form>
+</div>
 {% endblock content %}
 
 {% block extrajs %}
@@ -157,19 +101,19 @@ function handleFiles() {
       const li = document.createElement("li");
       list.appendChild(li);
 
-      const img = document.createElement("img");
+      
+      const img = document.getElementById("change-image");
       img.src = URL.createObjectURL(this.files[i]);
-      img.height = 60;
-      img.className = "rounded-circle avatar-upload";
+      img.height = 100;
+      img.width = 100;
+      img.className = "mx-auto avatar-upload rounded-circle";
       img.onload = () => {
         URL.revokeObjectURL(img.src);
       };
       
-      li.appendChild(img);
       
-      const info = document.createElement("span");
-      info.innerHTML = `${this.files[i].name}: ${this.files[i].size} bytes`;
-      li.appendChild(info);
+      
+      
     }
   }
 }
