--- a/book_club/users/templates/users/authentication/logout.html
+++ b/book_club/users/templates/users/authentication/logout.html
@@ -1,5 +1,6 @@
 {% extends 'users/base.html' %}
 {% load i18n static %}
+{% block title %}{% trans 'See you soon' %}{% endblock %}
 {% block content %}
 <div class="container-fluid d-flex align-items-center justify-content-center text-center">
     <div class="logout-container">
