--- a/book_club/users/templates/users/includes/footer.html
+++ b/book_club/users/templates/users/includes/footer.html
@@ -12,6 +12,8 @@
         <a href="#" class="small darkest-color">{% trans 'Terms and Conditions' %}</a>
         <br/>
         <a href="#" class="small darkest-color">{% trans 'Privacy Policy' %}</a>
+        <br/>
+        <a href="#" class="small darkest-color">{% trans 'Credits' %}</a>
       </div>
       <div class="text-center">
         <h6>{% trans 'Contact' %}</h6>
