--- a/book_club/users/templates/users/profile_update.html
+++ b/book_club/users/templates/users/profile_update.html
@@ -1,5 +1,5 @@
 {% extends "dashboard/base.html" %}
-{% load avatar i18n %}
+{% load avatar i18n static %}
 {% block title %}{% trans 'Profile Update' %}{% endblock title %}
 {% block content %}
 
@@ -39,7 +39,7 @@
       {% else %}
         <a href="#" id="fileSelect" class="avatar-upload">
           {{ request.user|avatar }}
-          <img id="add-image" class="avatar-upload d-none" src="" style="cursor: pointer;"/>
+          <img id="add-image" class="avatar-upload d-none" src="{% static 'assets/img/illustrations/in_thought.svg' %}" style="cursor: pointer;"/>
           <div class="avatar-overlay"><i class="fa fa-camera-retro icon"></i></div>
         </a>
       
@@ -51,7 +51,7 @@
 
       <div >
         {% if request.user.profile_pic%}
-          <a href="{% url 'profile-pic-delete' request.user.slug %}" class="mid-color">{% trans 'Delete your profile picture ?' %}</a>
+          <a type="button" class="mid-color" data-bs-toggle="modal" data-bs-target="#deletePicModal">{% trans 'Delete your profile picture ?' %}</a>
         {% else %}
           <a href="{% url 'change-avatar' request.user.slug %}" class="mid-color">{% trans 'Change your avatar color ?' %}</a>
         {% endif %}
@@ -70,8 +70,54 @@
       <button class="submit" type="submit ">{% trans 'Submit' %}</button>
       <div class="text-center">
         <a href="{% url 'profile' user.slug %}" class="mid-color">{% trans 'Cancel' %}</a>
+        <hr class="dashed">
+        <a href="{% url 'profile' user.slug %}" type="button" class="joy-color" data-bs-toggle="modal" data-bs-target="#deleteAccountModal"><i class="fa-solid fa-trash pe-2"></i>{% trans 'Delete Account' %}</a>
       </div>
   </form>
+</div>
+
+<!-- Modals -->
+<!-- Button trigger modal -->
+
+
+<!-- Modals -->
+<!-- Modal delete pic -->
+<div class="modal fade" id="deletePicModal" tabindex="-1" aria-labelledby="deletePicModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="text-center">
+        <img src="{% static 'assets/img/icons/error-100.png' %}" alt="error icon" />
+        <br/>
+        <h5 class="modal-title mid-color" id="exampleModalLabel">{% trans 'Delete Profile Pic ?' %}</h5>
+      </div>
+      <div class="text-center">
+        <p class="darkest-color p-4">{% trans "We think you look good on this pic, but your face, your choice !" %}</p>
+      </div>
+      <div class="d-flex justify-content-evenly pb-2">
+        <a href="{% url 'profile-pic-delete' request.user.slug %}"  class="btn btn-mid-color btn-modal" >{% trans "Yes, no regret" %}</a>
+        <a type="button" class="btn btn-outlined btn-modal outline-mid-color" data-bs-dismiss="modal">{% trans 'Cancel' %}</a>
+      </div>
+    </div>
+  </div>
+</div>
+ <!-- Modal delete Account-->
+<div class="modal fade" id="deleteAccountModal" tabindex="-1" aria-labelledby="deleteAccountModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="text-center">
+        <img src="{% static 'assets/img/icons/llorando-100.png' %}" alt="error icon" />
+        <br/>
+        <h5 class="modal-title mid-color" id="exampleModalLabel">{% trans 'Delete your Account ?' %}</h5>
+      </div>
+      <div class="text-center">
+        <p class="darkest-color p-4">{% trans "We'll miss you, but no emotional blackmail here !" %}</p>
+      </div>
+      <div class="d-flex justify-content-evenly pb-2">
+        <a href="#"  class="btn btn-mid-color btn-modal" >{% trans "Yes, no regret" %}</a>
+        <a type="button" class="btn btn-outlined btn-modal outline-mid-color" data-bs-dismiss="modal">{% trans 'Cancel' %}</a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
 
@@ -107,22 +153,28 @@ function handleFiles() {
 
       //if updating a previous profile pic
       const img = document.getElementById("change-image");
+      if (img) {
       img.src = URL.createObjectURL(this.files[i]);
       img.height = 100;
       img.width = 100;
       img.className = "mx-auto avatar-upload rounded-circle";
       img.onload = () => {
         URL.revokeObjectURL(img.src);
-
+      };
+      }
+      
       //if add profile pic
       const newImg = document.getElementById("add-image");
+      const avatar = document.getElementsByClassName("avatar")[1];
+      if (newImg) {
+      newImg.src = URL.createObjectURL(this.files[i]);
+      newImg.height = 100;
+      newImg.width = 100;
+      newImg.className = "mx-auto avatar-upload rounded-circle";
+      newImg.classList.remove("d-none");
+      avatar.classList.add("d-none");
       
-
-      };
-      
-      
-      
-      
+      }
     }
   }
 }
